ABC Fashion Co PRoject/force-app/main/default/objects/Account/fields/Customer_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Customer_Date_Of_Birth__c</fullName>
    <description>Customer Date Of Birth</description>
    <label>Customer Date Of Birth</label>
    <type>Date</type>
</CustomField>