ABC Fashion Co PRoject/force-app/main/default/objects/Account/fields/Profile_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Profile_Access_Token__c</fullName>
    <description>Unique token for customer profile access</description>
    <label>Profile Access Token</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>