ABC Fashion Co PRoject/force-app/main/default/objects/Account/fields/Shoe_size__c.field-meta.xml
<CustomField>
    <fullName>Shoe_size__c</fullName>
    <label>Shoe size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6.0</fullName>
            </value>
            <value>
                <fullName>6.5</fullName>
            </value>
            <value>
                <fullName>7.0</fullName>
            </value>
            <value>
                <fullName>7.5</fullName>
            </value>
            <value>
                <fullName>8.0</fullName>
            </value>
            <value>
                <fullName>8.5</fullName>
            </value>
            <value>
                <fullName>9.0</fullName>
            </value>
            <value>
                <fullName>9.5</fullName>
            </value>
            <value>
                <fullName>10.0</fullName>
            </value>
            <value>
                <fullName>10.5</fullName>
            </value>
            <value>
                <fullName>11.0</fullName>
            </value>
            <value>
                <fullName>11.5</fullName>
            </value>
            <value>
                <fullName>12.0</fullName>
            </value>
            <value>
                <fullName>12.5</fullName>
            </value>
            <value>
                <fullName>13.0</fullName>
            </value>
            <value>
                <fullName>13.5</fullName>
            </value>
            <value>
                <fullName>14.0</fullName>
            </value>
            <value>
                <fullName>14.5</fullName>
            </value>
            <value>
                <fullName>15.0</fullName>
            </value>
            <value>
                <fullName>15.5</fullName>
            </value>
            <value>
                <fullName>16.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>