ABC Fashion Co PRoject/force-app/main/default/objects/Account/recordTypes/Loyalty_Program_Customer.recordType-meta.xml
<RecordType>
    <fullName>Loyalty_Program_Customer</fullName>
    <active>true</active>
    <description>Record type for customers created during loyalty program enrollment.</description>
    <label>Loyalty Program Customer</label>
</RecordType>