ABC Fashion Co PRoject/force-app/main/default/objects/Account/validationRules/Validation_Rule_for_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_for_Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;),
&quot;^[0-9]{10}$&quot;
))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please ensure the phone number is 10 digits (US/Canada)</errorMessage>
</ValidationRule>